Light theme, toggle theme button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="navbar">
-        Sticky Note
+        <div class="brand">Sticky Note</div>
+        <div class="link"><a target="_blank" href="https://github.com/ImranePC/sticky-note"><i class="fab fa-github fa-lg"></i></a></div>
+        <div class="link"><a onclick="setTheme('toggle')"><i class="far fa-lightbulb fa-lg"></i></a></div>
     </div>
 
     <div class="board" id="board">
@@ -19,7 +21,7 @@
                 <div class="pin"><img src="img/pin_red.png"></div>
             </div>
             <div class="note-content" id="notecontent0">
-                <p>Hello world ...</p>
+                <p>My first note.</p>
             </div>
             <div class="option">
                 <input id="inputnote0" type="text" placeholder="...">
